--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.8",
+    "@clerk/themes": "^2.2.5",
     "@uploadthing/react": "^7.1.5",
     "mongoose": "^8.9.3",
     "next": "15.1.4",
